Cart items validation and bug fixes in checkout and product sync
