# src/Kentico.Xperience.StoreApi/ShoppingCart/KShoppingCartItemValidationError.cs
@@ -1,0 +1,11 @@
+﻿namespace Kentico.Xperience.StoreApi.ShoppingCart;
+
+/// <summary>
+/// Dto for <see cref="CMS.Ecommerce.ShoppingCartItemValidationError"/>
+/// </summary>
+public class KShoppingCartItemValidationError
+{
+    public int SkuId { get; set; }
+
+    public string Message { get; set; }
+}
